# HealthcareSystems

care/: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Makefile  Pipfile  README.md  docker-compose.coolify.yaml  docker-compose.local.yaml  docker-compose.yaml  flake.nix  plug_config.py  pyproject.toml
care/.devcontainer/: devcontainer.json
care/.github/: dependabot.yml
care/.github/workflows/: deploy.yml  docs.yml  linter.yml  release.yml  reusable-test.yml
care/care/audit_log/: helpers.py
care/care/emr/: apps.py
care/care/emr/admin/: __init__.py  encounter.py  patient.py
care/care/emr/extensions/: base.py  validator.py
care/care/emr/locks/: billing.py  inventory.py
care/care/emr/migrations/: 0019_consent_note.py  0020_observation_component.py  0021_metaartifact.py  0022_facilitylocation_sort_index.py  0023_allergyintolerance_allergy_intolerance_type.py  0023_uservaluesetpreference.py  0024_merge_20250320_2002.py  0025_alter_tokenbooking_token_slot.py  0026_encounter_treating_doctors.py  0027_rename_treating_doctors_encounter_care_team.py  0028_alter_encounter_care_team.py  0029_encounter_discharge_summary_advice.py  0030_encounter_tags_medicationrequest_dispense_status_and_more.py  0031_rename_reason_for_visit_tokenbooking_note.py  0032_tokenbooking_associated_encounter.py  0033_healthcareservice_managing_organization.py  0034_token_system.py  0035_remove_tagconfig_slug.py  0036_deliveryorder_supplydelivery_order_dispenseorder_and_more.py  0037_deliveryorder_destination_deliveryorder_origin_and_more.py  0038_paymentreconciliation_location.py  0039_formsubmission_questionnaireresponse_form_submission.py  0040_alter_observation_interpretation.py  0040_template_reportupload.py  0041_template_options.py  0042_merge_20251209_2240.py  0043_account_total_billable_charge_items.py  0044_chargeitem_paid_on.py  0045_dispenseorder_alternate_identifier_and_more.py  0046_alter_dispenseorder_name.py  0047_account_tags.py  0048_product_additional_metadata.py  0049_deliveryorder_additional_metadata_and_more.py  0050_rename_additional_metadata_deliveryorder_extensions_and_more.py  0051_invoice_lock_history_invoice_locked.py  0052_account_extensions.py  0053_remove_patient_marital_status_and_more.py  0054_product_standard_pack_size_and_more.py  0055_resourcecategory_calculated_monetary_components_and_more.py  0056_monetary_components_float_to_decimal.py  (+21 more)
care/care/emr/models/: __init__.py  account.py  activity_definition.py  allergy_intolerance.py  base.py  charge_item.py  charge_item_definition.py  consent.py  diagnostic_report.py  encounter.py  facility_config.py  favorites.py  file_upload.py  healthcare_service.py  inventory_item.py  invoice.py  location.py  medication_administration.py  medication_dispense.py  medication_request.py  meta_artifact.py  observation.py  observation_definition.py  organization.py  patient.py  payment_reconciliation.py  product.py  product_knowledge.py  questionnaire.py  resource_category.py  service_request.py  specimen.py  specimen_definition.py  supply_delivery.py  supply_request.py  tag_config.py  valueset.py
care/care/emr/reports/: __init__.py  report_type_registry.py  report_type_utils.py  report_types.py  report_utils.py
care/care/emr/resources/: base.py  permissions.py
care/care/emr/signals/: __init__.py
care/care/emr/tagging/: base.py  filters.py
care/care/emr/tasks/: __init__.py  cleanup_expired_token_slots.py  cleanup_incomplete_file_uploads.py  report_generation.py  totp.py
care/care/emr/tests/: test_account_api.py  test_activity_definition_api.py  test_allergy_intolerance_api.py  test_booking_api.py  test_charge_item_api.py  test_code_concept.py  (+44 more)
care/care/fixtures/: base.py  constants.py  context.py  fixtures.md
care/care/templates/: base.html
care/care/users/: admin.py  apps.py  models.py  reset_password_views.py
care/care/utils/: lock.py  shortcuts.py
care/config/: api_router.py  authentication.py  celery_app.py  ratelimit.py  urls.py
care/config/settings/: base.py  config.py  local.py  production.py  staging.py  test.py
care/data/: questionnaire_fixtures.json  template_fixtures.json
care/docker/: .local.env  .prebuilt.env  dev.Dockerfile  prod.Dockerfile
care/docker/db/: init-odoo-user.sql
care/docs/: conf.py  index.rst
care/docs/development/: index.rst  local-setup.rst  nix-development.md
care/docs/setup/: database-backup.rst  index.rst
care/docs/source/: index.rst
care/scripts/: celery-dev.sh  celery_beat.sh  celery_worker.sh  nix-dev-setup.sh  start-dev.sh  start.sh
care_odoo_be/: CONTRIBUTING.md  pyproject.toml
care_odoo_be/.github/: ISSUE_TEMPLATE.md
care_odoo_be/docs/: index.md  installation.md  usage.md
care_odoo_be/src/care_odoo/: cli.py  settings.py
(+1485 files in other folders)
